--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
-<!DOCTYPE html>
 <html>
-	<head>
-	<meta charset="utf-8"/>
-		<title>ChatBot</title>
-	</head>
-	<body>
-	
-		<h1>answer</h1>
-		<ul id="authors">
-		
-		</ul>
-	</body>
-	<script src="chatbot.js"></script>
+<head>
+<meta charset="utf-8"/>
+ <link href="style.css" rel="stylesheet">
+<script type="text/javascript" src="script.js"> </script>
+</head>
+<body class="bg">
+  <table>
+<tr><td>
+      <div id='boite'>
+        <div id='boxborder'>
+        
+          <p id="chatlog7" class="chatlog">&nbsp;</p>
+          <p id="chatlog6" class="chatlog">&nbsp;</p>
+          <p id="chatlog5" class="chatlog">&nbsp;</p>
+          <p id="chatlog4" class="chatlog">&nbsp;</p>
+          <p id="chatlog3" class="chatlog">&nbsp;</p>
+          <p id="chatlog2" class="chatlog">&nbsp;</p>
+          <p id="chatlog1" class="chatlog">&nbsp;</p>
+          <input type="text" name="chat" id="boitedisc" placeholder="howdy! wanna talk ? :D" onfocus="placeHolder()">
+        </div>
+</td>
+<td>
+        <div id='trbox'>
+          <p id="chatlog2" class="chatlog">&nbsp;</p>
+          <p id="chatlog1" class="chatlog">&nbsp;</p>
+          <input type="text" name="chat" id="boitedisc1" placeholder="u write, icorrect ;)" onfocus="placeHolder1()">
+        </div>
+        <br>
+        <br>
+      </div>
+    </td>
+</tr>
+</table>
+</body>
 </html>
