update index with gramcheck

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 </td>
 <td>
         <div id='trbox'>
-          <p id="chatlog2" class="chatlog">&nbsp;</p>
-          <p id="chatlog1" class="chatlog">&nbsp;</p>
+          <p id="chatlo5" class="chatlog">&nbsp;</p>
+          <p id="chatlo4" class="chatlog">&nbsp;</p>
+          <p id="chatlo3" class="chatlog">&nbsp;</p>
+          <p id="chatlo2" class="chatlog">&nbsp;</p>
+          <p id="chatlo1" class="chatlog">&nbsp;</p>
           <input type="text" name="chat" id="boitedisc1" placeholder="u write, icorrect ;)" onfocus="placeHolder1()">
         </div>
         <br>
